# Coursera

ML-courses/: Central-limit-theorem-task.ipynb
red_belt/priority_collection/: priority_collection.cpp  test_runner.h
red_belt/red_exam/: iterator_range.h  parse.h
red_exam/: parse.cpp  search_server.cpp  search_server.h
yellow_exam/: CMakeLists.txt  condition_parser.cpp  condition_parser.h  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_db.h  test_runner.cpp  test_runner.h  token.cpp
